# Frameworm

./: .coverage  .gitignore  .isort.cfg  404.html  CHANGELOG.md  Dockerfile  LICENSE  PROJECT_PROGRESS.md  Readme.md  __init__.py  __main__.py  __version__.py  bayesian_optimization_design.md  callbacks_design.md  check.py  check_dcgan.py  cleanup2.ps1  cli_design.md  conftest.py  day23_design.md  dcgan_design.md  ddpm_design.md  debug_discovery.py  debug_tes_plugins.py  deployment_design.md  docker-compose.yml  docs_design.md  error_patterns.md  error_system_design.md  exception_hierarchy.md  fix.py  fix2.py  fix_callbacks.py  fix_cfg2.py  fix_cfg_ddpm.py  fix_cfg_forward.py  fix_cfg_nrb.py  fix_config.py  fix_dcgan.py  fix_dcgan2.py  (+51 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/LAUNCH_ASSETS/: hackernews.md  launch_checklist.md  product_hunt_post.md  reddit_post.md  twitter_thread.md
.github/workflows/: release.yml  tests.yml
advanced_search/: index.html
agent/: __init__.py  index.html
agent/benchmark/: inject_failures.py  results_analyzer.py  run_suite.py
agent/causal/: attribution.py  causal_graph.py  do_intervention.py
agent/classifier/: __init__.py  anomaly_types.py  priority_queue.py  rule_engine.py
agent/control/: __init__.py  actions.py  (+2 more)
api-reference/: index.html
api_reference/: index.html
checkpoints/: best.pt  latest.pt  training_state.json
cli/: __init__.py  evaluate.py  export.py  logger.py  main.py  monitor.py  pipeline.py  search.py  search_cli.py  train.py
configs/: agent_thresholds.yaml  base.yaml  deploy_config.yaml  shift_config.yaml
core/: __init__.py  config.py  exceptions.py  registry.py  testconfig.py  types.py
cost/: __init__.py  alerter.py  calculator.py  cli.py  dashboard.py  deploy_integration.py  middleware.py  report.py  store.py  tracker.py
deploy/: __init__.py  index.html
deployment/: __init__.py  cli.py  export.py  onnx_runtime.py  server.py
design/: post1_frameworm_error.py
distributed/: __init__.py  data_loader.py  data_parallel.py  profiler.py  sampler.py  trainer.py  utils.py
docs/: README.md  advanced_search.md  agent.md  api_reference.md  comparisons.md  contributing.md  deploy.md  faq.md  index.md  installation.md  quick-reference.md  shift.md  training_comparison.md
examples/: README.md  Untitled  advanced_metrics_example.py  config_examples.py  dcgan_generation.py  ddpm_generation.py  demo_notebook.py  distributed_benchmark.py  distributed_training_example.py  experiment_tracking_example.py  graph_pipeline.py  hyperparameter_search_example.py  search_comparison_example.py  train_dcgan.py  train_with_logging.py  vae_generation.py
experiment/: __init__.py  cli.py  experiment.py  manager.py  visualization.py
experiments/: benchmark_results.json  experiment_schema.sql  experiments.db
faq/: index.html
frameworm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
graph/: __init__.py  graph.py  monitoring.py  node.py  visualization.py
installation/: index.html
integrations/: __init__.py  database.py  mlflow.py  notifications.py  storage.py  wandb.py
k8s/: deployment.yaml
metrics/: __init__.py  evaluator.py  fid.py  inception_score.py  lpips.py
models/: __init__.py  base.py  cfg_ddpm.py  vitgan.py  vqvae2.py
monitoring/: ab_testing.py  drift.py  metrics.py  model_registry.py
overrides/: main.html
pipelines/: __init__.py  base.py
plugins/: README.md  hooks.py  loader.py
posts/: post1_frameworm_error.py
production/: health.py  observability.py  rate_limit.py  security.py  shutdown.py  validation.py
quick-reference/: index.html
scripts/: check_docstrings.py  create_demo_gifs.py  generate_api_docs.py  generate_demo_notebook.py  generate_paper_table.py  pre_launch.py  run_benchmark.py  run_benchmarks.py  train_forecaster.py  train_policy.py  write_table_only.py
search/: __init__.py  analysis.py  bayesian_search.py  early_stopping.py  grid_search.py  hyperband.py  random_search.py  search_index.json  space.py  space_objects.py
shift/: __init__.py
site/: 404.html  index.html  objects.inv  sitemap.xml
test-project2/: live_data.npy  ref_data.npy  search_space.yaml
test_configs/: test.yaml
tests/: test_config_script.py  test_discover.py  test_env.py  test_final_verification.py  test_validation_script.py
trainers/: __init__.py  base.py
training/: __init__.py  advanced.py  callbacks.py  evaluation.py  loggers.py  metrics.py  schedulers.py  state.py  trainer.py
training_comparison/: index.html
ui/: api.py  build_frontend.sh
utils/: data_utils.py  memory.py  profiler.py
(+437 files in other folders)
